# MyWorkOS

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-pages.yml
agents/root_agent/: agent.py  common.py  registry.py
agents/root_agent/memory/: memory_service.py
agents/root_agent/pipelines/: book_task_pipeline.py  compare_pipeline.py  data_report_pipeline.py  general_report_pipeline.py  meeting_action_pipeline.py  message_reply_pipeline.py  qa_pipeline.py  quick_insight_pipeline.py  recommendation_pipeline.py  requirement_plan_pipeline.py  schedule_planning_pipeline.py  slide_outline_pipeline.py
agents/root_agent/sub_agents/book_agent/: SKILL.md  SOUL.md  agent.py  tools.py
agents/root_agent/sub_agents/data_agent/: SKILL.md  SOUL.md  agent.py  tools.py
agents/root_agent/sub_agents/document_agent/: SKILL.md  SOUL.md  agent.py  tools.py
agents/root_agent/sub_agents/schedule_agent/: SKILL.md  SOUL.md  agent.py  tools.py
agents/root_agent/sub_agents/task_agent/: SKILL.md  SOUL.md  agent.py  tools.py
config/: channels.yaml
data/uploads/: new_report.csv
gateway/: auth.py  runtime.py  webhook_server.py
gateway/adapters/: notion_adapter.py  slack_adapter.py  teams_adapter.py  telegram_adapter.py  web_adapter.py
heartbeat/: HEARTBEAT.md  diff_engine.py  scheduler.py
job_queue/: queue_manager.py
scripts/: web-serve.sh
test/: check_registry.py  smoke_test.py
web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
web/src/app/: App.tsx
web/src/styles/: fonts.css  theme.css
