[project]
name = "keti-workos"
version = "0.1.0"
description = "Multi-channel agent orchestration with Google ADK"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-adk[extensions]>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "redis>=5.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "python-telegram-bot>=21.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "gateway", "job_queue", "heartbeat"]

[tool.ruff]
line-length = 100
target-version = "py311"
